<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/back_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/spoqa_han_sans_regular"
            android:gravity="center"
            android:text="환전"
            android:textColor="#000000"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/close_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_close" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="42dp"
        android:paddingTop="65dp">

        <CheckBox
            android:id="@+id/agree_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_icon_check_dis"
            android:button="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_regular"
            android:text="@string/jointerms_text_02"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="42dp"
        android:paddingTop="20dp"
        android:paddingRight="42dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layerType="software"
            android:src="@drawable/dashed_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        android:paddingLeft="42dp"
        android:paddingRight="42dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/agree_term01_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_icon_check_dis"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqa_han_sans_regular"
                android:text="@string/jointerms_text_03"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/agree_term01_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:src="@drawable/arrow_r" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        android:paddingLeft="42dp"
        android:paddingRight="42dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/agree_term02_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_icon_check_dis"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqa_han_sans_regular"
                android:text="@string/jointerms_text_03"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/agree_term02_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:src="@drawable/arrow_r" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        android:paddingLeft="42dp"
        android:paddingRight="42dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/agree_term03_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_icon_check_dis"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqa_han_sans_regular"
                android:text="@string/jointerms_text_03"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/agree_term03_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:src="@drawable/arrow_r" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        android:paddingLeft="42dp"
        android:paddingRight="42dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/agree_term04_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_icon_check_dis"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqa_han_sans_regular"
                android:text="@string/jointerms_text_04"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/agree_term04_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:src="@drawable/arrow_r" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/join_terms_next_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:background="#304db9"
            android:fontFamily="@font/spoqa_han_sans_regular"
            android:gravity="center"
            android:text="환전"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>

</LinearLayout>
