<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout_actMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_action_bar_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_default="percent">

            <ImageView
                android:id="@+id/main_top_drawer_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.4667"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.2823"
                app:srcCompat="@drawable/ic_logo_apay" />

            <ImageView
                android:id="@+id/main_top_drawer_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.7333"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.1294"
                app:srcCompat="@drawable/icon_menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/card_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/spoqa_han_sans_regular"
            android:gravity="center"
            android:text="@string/main_card_title_string"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/card_image_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_action_bar_container"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_image_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/img_card"
            app:layout_constraintBottom_toTopOf="@+id/main_bottom_button_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_action_bar_container"
            app:layout_constraintVertical_bias="0.82"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.7">

            <Button
                android:id="@+id/purchase_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/round_button_store"
                android:fontFamily="@font/notosans_medium"
                android:padding="15dp"
                android:text="@string/purchase_button_string"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.19"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92"
                app:layout_constraintWidth_default="percent" />

            <TextView
                android:id="@+id/card_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/spoqa_han_sans_regular"
                android:text="@string/main_balance_title_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.618"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.2" />

            <TextView
                android:id="@+id/card_balance_number"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeMaxTextSize="35sp"
                android:autoSizeMinTextSize="16sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/spoqa_han_sans_regular"
                android:gravity="left|center_vertical"
                android:minWidth="30dp"
                android:text="0"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.13"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/card_balance_title"
                app:layout_constraintTop_toBottomOf="@+id/card_balance_title"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_default="wrap"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/main_balance_currency"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeMaxTextSize="60sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/spoqa_han_sans_bold"
                android:text="P"
                android:textColor="#5e7ae5"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/card_balance_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/card_balance_number"
                app:layout_constraintTop_toTopOf="@+id/card_balance_number"
                app:layout_constraintVertical_bias="0.709"
                app:layout_constraintWidth_default="wrap" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_bottom_button_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8">

            <RelativeLayout
                android:id="@+id/main_card_charge_button_relative"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.39"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.485">

                <Button
                    android:id="@+id/main_card_charge_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeMinTextSize="9sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/button_hover_effect_v2"
                    android:fontFamily="@font/spoqa_han_sans_regular"
                    android:text="카드 충전"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_card_info_button_relative"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.39"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/main_card_charge_button_relative"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.485">

                <Button
                    android:id="@+id/main_card_info_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeMinTextSize="9sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/button_hover_effect_v3"
                    android:fontFamily="@font/spoqa_han_sans_regular"
                    android:text="카드 정보"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/include_actMain_drawer"
        layout="@layout/item_drawer_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</androidx.drawerlayout.widget.DrawerLayout>